syntax = "proto3";

package cost_control;
option go_package = "../src";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool error = 1;
  optional string errorMessage = 2;
  optional string token = 3;
}
